# job-scraper-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml  requirements.txt
remoteok_api/: cli.py  database.py  job_parser.py  location_utils.py  main.py  mappings.py  models.py  scraper.py
