[project]
name = "remoteok-job-scraper"
version = "0.1.0"
description = "RemoteOK job scraper and FastAPI search API"
requires-python = ">=3.11"

dependencies = [
    "annotated-doc",
	"annotated-types",
    "beatifulsoup4",
    "emoji",
    "playwright",
    "fastapi",
	"uvicorn",
	"python-dotenv",
    "sqlmodel",
	"psycopg[binary]",
	"lxml"
]